package com.example.psoft_aisafe.model.enums;

/**
 *
 */

public enum AirportStatus {
    OPERATIONAL,
    CLOSED,
    UNDER_MAINTENANCE
}
